THEME - Resolve image height issue on horizontal scroll

--- a/assets/sass/modules/_horizontal-scroll.scss
+++ b/assets/sass/modules/_horizontal-scroll.scss
@@ -52,10 +52,8 @@
     vertical-align: top;
     img {
       max-height: 20rem;
-      min-width: auto;
-      width: auto;
       @include breakpoint($tablet) {
-        max-height: auto;
+        max-height: inherit;
         min-width: 100%;
         width: 100%;
         
